--- a/dagens-album.html
+++ b/dagens-album.html
@@ -119,7 +119,7 @@ function loadScript(scriptUrl) {
 }
 
 // use
-loadScript('http://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js')
+loadScript('https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js')
   .then(doThaThing)
   .catch(() => {
     console.error('Script loading failed! Handle this error');
