Initial star system

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             <div id="previous-artist"></div>
           </div>
           <div class="previous-art-container" id="previous-album-art"></div>
-          <div class="previous-rating-container">
+          <div id="previous-rating-container">
+            <svg class="star-svg">
+              <polygon id="stars-polygon" style="fill-rule: nonzero" />
+            </svg>
           </div>
         </div>
       </div>
