Base support for ratings

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
           </div>
           <div class="previous-art-container" id="previous-album-art"></div>
           <div id="previous-rating-container">
-            <svg class="star-svg">
-              <polygon id="stars-polygon" style="fill-rule: nonzero" />
-            </svg>
           </div>
+          <div id="previous-rating-numerical"></div>
         </div>
       </div>
       <div class="today-album-container">
