--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="previous-art-container" id="previous-album-art"></div>
           <div id="previous-rating-container">
           </div>
-          <div id="previous-rating-numerical"></div>
+          <div class="previous-rating-text">Average rating: <span id="previous-rating-numerical"></span></div>
         </div>
       </div>
       <div class="today-album-container">
