--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="previous-rating-text">Average rating: <span id="previous-rating-numerical"></span></div>
         </div>
         <div class="progress-section-container"> <!-- New container for title + bar + text -->
-          <div class="progress-title">Progress</div>
+          <div class="progress-title">Total progress</div>
           <div class="progress-bar-container">
             <div id="progress-bar-filled"></div>
           </div>
